--- a/app/src/main/res/layout/fragment_server.xml
+++ b/app/src/main/res/layout/fragment_server.xml
@@ -102,4 +102,9 @@
         app:layout_constraintStart_toStartOf="@id/actions_container"
         app:layout_constraintTop_toBottomOf="@+id/actions_container"
         tools:text="This is the login disclaimer." />
+
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/contentCompose"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
